--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,14 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
-
+h1{
+    margin-bottom: 0.5em;
+    font-size: 3em;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
 main {
     padding: 1em;
     margin-top: 2em;
@@ -78,8 +85,10 @@ footer {
     left: 0;
     right: 0;
     z-index: 1000;
+    margin-top: 2em;
 }
-h2{
+
+h2 {
     text-shadow: 1px 1px 2px black;
     margin-bottom: 0.5em;
     font-size: 2em;
@@ -88,3 +97,37 @@ h2{
     font-weight: bold;
     letter-spacing: 2px;
 }
+.species-gallery {
+    text-align: center;
+    margin-top: 1em;
+    padding: 1em;
+  }
+  
+  .species-card {
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+    margin: 0.5em;
+    padding: 1em;
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    transition: transform 0.2s;
+  }
+  
+  .species-card img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto 1em;
+    margin-bottom: 0.5em;
+  }
+
+  section{
+    margin-top: 2em;
+    padding: 1em;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
