--- a/styles.css
+++ b/styles.css
@@ -1,161 +1,103 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-color: #f0f8ff;
-    line-height: 1.9;
-    font-family: Arial, sans-serif;
-    text-align: center;
-}
-
-.ocean-background {
-    padding: 1em;
-    min-height: 100vh;
+.species-card:hover {
+    background-color: #708bd489;
     color: white;
-    text-shadow: 1px 1px 2px black;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-image: url("ocean.jpg");
-    background-size: cover;
+    transform: scale(1.05);
 }
 
-header {
-    background-color: rgba(0, 51, 102, 0.8);
-    color: white;
-    padding: 1em;
-    text-align: center;
-    position: fixed;
-    top: 0;
+iframe {
     width: 100%;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-
+    height: 30em;
+    border: none;
+    margin-top: 0.5em;
 }
 
-nav ul {
-    padding: 0;
-    list-style: none;
-    margin: 0;
-}
-
-nav ul li {
-    margin-right: 1em;
-    display: inline;
-    list-style: none;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-h1 {
-    margin-bottom: 0.5em;
-    font-size: 3em;
-    color: #fff;
-    text-align: center;
-    font-weight: bold;
-    letter-spacing: 2px;
-}
-
-main {
-    padding: 1em;
-    margin-top: 2em;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-
-footer {
-    background-color: rgba(0, 51, 102, 0.8);
-    color: white;
-    padding: 1em;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    margin-top: 2em;
-}
-
-h2 {
-    text-shadow: 1px 1px 2px black;
-    margin-bottom: 0.5em;
-    font-size: 2em;
-    color: #fff;
-    text-align: center;
-    font-weight: bold;
-    letter-spacing: 2px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 1em;
-}
-
-table,
-th,
-td {
-    border: 1px solid #ccc;
-}
-
-th,
-td {
-    padding: 0.5em;
-    text-align: center;
-}
-
-.species-gallery {
-    text-align: center;
-    margin-top: 1em;
-    padding: 1em;
-  
+ol {
+    list-style-position: inside;
+    padding-left: 0;
+    margin: 0 auto;
 }
 
 .species-card {
     display: inline-block;
     vertical-align: top;
-    width: 20%;
+    width: 30%;
+    min-width: 250px;
+    max-width: 300px;
+    height: 20em;
     margin: 0.5em;
     padding: 1em;
-    background: white;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 1em;
+    background-color: #e2eef728;
+    color: #0c225d;
+    border: 1px solid #708bd489;
     border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s, background-color 0.3s;
 }
 
-
-.species-card img {
-    max-width: 90%;
-    height: 90%;
-    display: block;
-    margin: 0 auto 1em;
-    margin-bottom: 0.5em;
+h2 {
+    font-size: 1.2em;
 }
 
-.species-card:hover {
-    transform: scale(1.05);
-    transition: transform 0.2s;
-
+nav ul li {
+    display: inline;
+    margin-right: 1em;
 }
 
-.species-card h3 {
-    font-size: 1.5em;
-    margin-bottom: 0.5em;
+.species-gallery {
+    margin-top: 1em;
+    padding: 1em;
+}
+
+.container {
+    max-width: 900px;
+    padding: 2em;
+    margin: 0 auto;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+form {
+    background-color: #e2eef7a6;
+    padding: 1em;
+    border-radius: 5px;
+    max-width: 600px;
+    margin: 2em auto;
+    color: #0c225d;
+    border: 1px solid #708bd489;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+header {
+    top: 0;
+}
+
+table,
+th,
+td {
+    border: 1px solid #708bd489;
+}
+
+input[type="submit"]:hover {
+    background-color: #4abcc8;
+}
+
+section {
+    margin: 2em;
+    padding: 1em;
+    text-align: center;
+    border-radius: 6px;
+    display: contents;
+}
+
+footer {
+    bottom: 0;
 }
 
 .species-card p {
@@ -163,25 +105,12 @@ td {
     margin-bottom: 0.5em;
 }
 
-section {
-    margin-top: 2em;
-    padding: 1em;
-    margin-bottom: 2em;
-}
-
-input[type="text"],
-select,
-textarea {
-    width: 100%;
-    padding: 0.5em;
-    margin-top: 0.3em;
-    margin-bottom: 1em;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+label {
+    font-weight: bold;
 }
 
 input[type="submit"] {
-    background-color: #004466;
+    background-color: #708ad4;
     color: white;
     padding: 0.7em 1.5em;
     border: none;
@@ -189,26 +118,128 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-input[type="submit"]:hover {
-    background-color: #006699;
+ul,
+ol {
+    padding-left: 1.5em;
+    text-align: center;
 }
 
-form {
-    background-color: #ffffff;
+.intro-text {
+    font-size: 1.2em;
+    margin-bottom: 1em;
+    word-spacing: normal;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1em;
+    background-color: #e2eef728;
+    max-width: 800px;
+    font-weight: bold;
+    color: #0c225d;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin: 0 auto;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+h1,
+h2 {
+    margin-bottom: 0.5em;
+    text-align: center;
+    color: #0c225d;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+nav ul {
+    list-style: none;
+    display: inline-block;
+}
+
+header,
+footer {
+    background-color: #4aa6c899;
+    color: white;
+    position: fixed;
+    padding: 0.5em;
+    width: 100%;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    text-align: center;
+}
+
+input[type="text"],
+select,
+textarea {
+    width: 80%;
+    max-width: 800px;
+    padding: 0.5em;
+    margin-top: 0.3em;
+    margin-bottom: 1em;
+    border: 2px solid #8ea8dd;
+    border-radius: 4px;
+}
+
+.species-card img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto 1em;
+}
+
+.species-card h3 {
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.25;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    color: #dfe7e9;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+.ocean-background {
+    padding: 1em;
+    min-height: 100vh;
+    background: url("ocean.jpg") no-repeat fixed center/cover;
+}
+
+.species-facts {
+    background-color: #e2eef751;
     padding: 1em;
     border-radius: 5px;
-    max-width: 600px;
-    margin: 2em auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    color: #000;
+    margin-top: 1em;
+    max-width: 800px;
+    margin: 0 auto;
+    color: #0c225d;
+    border: 1px solid #708bd489;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-label {
-    font-weight: bold;
-}
-
-ol {
-    list-style-position: inside;
+th,
+td {
+    padding: 0.5em;
     text-align: center;
-    padding-left: 0;
 }
